figue/tests/integration/snapshots/main__integration__subcommand__unknown_subcommand_error.snap
---
source: crates/figue/tests/integration/subcommand.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

command.. .. ⨯ MISSING

Run with --help for usage information.
Error: unexpected argument: unknown
   ╭─[ <cli>:1:1 ]
   │
 1 │ unknown
   │ ───┬───  
   │    ╰───── unexpected argument: unknown
───╯
